--- a/README
+++ b/README
@@ -1,8 +1,12 @@
-#!/usr/bin/env python3
-# -*- coding: utf-8 -*-
-"""
-Created on Wed May 29 07:43:42 2019
+FEC expenditure analysis retrieves all of the schedule B filings for six different Democratic presidential candidates.
 
-@author: ilana
-"""
+Set up:
+    - Create an anaconda environment using python 3.7
+    - pip install requirements.txt
+    - create a .env file with the following two properties:
+        - KEY=<FEC API developer key>
+        - FEC_URL="https://api.open.fec.gov/v1"
 
+Run: 
+    - aggregate.py uses client.py to request data for specific candidates to create local csvs
+    - plot.py reads from csvs created in aggregate and sends plots to plotly 
